--- a/contacts/index.html
+++ b/contacts/index.html
@@ -162,7 +162,7 @@ function handleCloseOnClick() {
     });
 }
 })();</script> <div></div> </header>  </div>  <div class="max-w-screen-xl mx-auto px-5">  <div class="mt-16 text-center"> <h1 class="text-4xl lg:text-5xl font-bold lg:tracking-tight"> Contacts </h1> <p class="text-lg mt-4 text-slate-600">  </p> </div> <div class="grid md:grid-cols-2 gap-10 mx-auto max-w-4xl mt-16"> <div> <p>
-We understand that every move is different and we have an individual approach for each. We are a here to help.
+We understand that every move is different and we have an individual approach for each. We're here to help.
 </p> <p class="mt-4">
 Contact us and get the best solution
 </p> <div class="mt-5"> <div class="flex items-center mt-2 space-x-2 text-gray-600"> <svg width="1em" height="1em" viewBox="0 0 24 24" class="text-gray-400 w-4 h-4" data-icon="uil:map-marker">  <symbol id="ai:uil:map-marker"><path fill="currentColor" d="M12 2a8 8 0 0 0-8 8c0 5.4 7.05 11.5 7.35 11.76a1 1 0 0 0 1.3 0C13 21.5 20 15.4 20 10a8 8 0 0 0-8-8m0 17.65c-2.13-2-6-6.31-6-9.65a6 6 0 0 1 12 0c0 3.34-3.87 7.66-6 9.65M12 6a4 4 0 1 0 4 4a4 4 0 0 0-4-4m0 6a2 2 0 1 1 2-2a2 2 0 0 1-2 2"/></symbol><use xlink:href="#ai:uil:map-marker"></use>  </svg> <span>Terra Moving Services LLC</span> </div> <div class="flex items-center mt-2 space-x-2 text-gray-600"> <div class="w-4 h-4"></div> <span>
